--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/security
+spring.datasource.url=jdbc:mysql://localhost:3306/cader
 spring.datasource.username=dev
 spring.datasource.password=dev0000
 
