--- a/web 3/cader-web/package.json
+++ b/web 3/cader-web/package.json
@@ -16,10 +16,10 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
-    "axios": "^0.27.2",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "@mui/icons-material": "5.14.1",
     "typescript": "5.1.3"
   }
 }
