--- a/web 3/cader-web/package.json
+++ b/web 3/cader-web/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.4",
+    "@mui/icons-material": "5.14.1",
+    "@mui/material": "^5.14.1",
+    "@mui/x-data-grid": "^6.10.1",
     "@nestjs/axios": "^3.0.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
@@ -19,7 +21,6 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@mui/icons-material": "5.14.1",
     "typescript": "5.1.3"
   }
 }
