--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.datasource.username=root
 spring.datasource.password=0000
 
 spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 #spring.jpa.defer-datasource-initialization=true
 
 vKeyPass=7e15a70dd45350f6d1057ce9bc7d5be7
-vTokenValidity=4
+vTokenValidity=24
