--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cader3
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/cader-dev
+spring.datasource.username=cader
 spring.datasource.password=0000
 
 spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 #spring.jpa.defer-datasource-initialization=true
 
