--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=cader
 spring.datasource.password=0000
 
 spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 #spring.jpa.defer-datasource-initialization=true
 
