--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cader-dev
+spring.datasource.url=jdbc:mysql://localhost:3306/cader-3
 spring.datasource.username=cader
 spring.datasource.password=0000
 
