baixas receitas parte 1

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cader
+spring.datasource.url=jdbc:mysql://localhost:3306/cader-3
 spring.datasource.username=root
-spring.datasource.password=idev
+spring.datasource.password=Idev
 
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.show-sql=true
