--- a/mobile/cader/package.json
+++ b/mobile/cader/package.json
@@ -16,7 +16,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
