--- a/mobile/cader/package.json
+++ b/mobile/cader/package.json
@@ -13,11 +13,13 @@
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@types/react-native-calendar-picker": "^7.0.5",
     "axios": "^1.5.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-safe-area-context": "4.6.3",
     "sync-storage": "^0.4.2",
