--- a/mobile/cader/package.json
+++ b/mobile/cader/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.72.6",
     "react-native-calendar-picker": "^7.1.4",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
     "sync-storage": "^0.4.2",
     "yarn": "^1.22.19"
