--- a/mobile/cader/package.json
+++ b/mobile/cader/package.json
@@ -9,6 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.9",
@@ -23,6 +29,8 @@
     "react-native-gesture-handler": "^2.13.4",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "^13.14.0",
+    "react-native-vector-icons": "^10.0.1",
     "sync-storage": "^0.4.2",
     "yarn": "^1.22.19"
   },
