--- a/mobile/cader/app.json
+++ b/mobile/cader/app.json
@@ -19,6 +19,7 @@
     },
     "android": {
       "package": "com.condelar.cader",
+      "usesCleartextTraffic": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
