--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.jpa.properties.hibernate.format_sql=true
 
 vKeyPass=7e15a70dd45350f6d1057ce9bc7d5be7
 vTokenValidity=24
+
+## The format used for the keystore. It could be set to JKS in case it is a JKS file
+#server.ssl.key-store-type=PKCS12
+## The path to the keystore containing the certificate
+#server.ssl.key-store=classpath:keystore/baeldung.p12
+## The password used to generate the certificate
+#server.ssl.key-store-password=g9i6l0m1a2r1
+## The alias mapped to the certificate
+#server.ssl.key-alias=baeldung
+#
+#server.ssl.enabled=true
