--- a/mobile/cader/app.json
+++ b/mobile/cader/app.json
@@ -2,35 +2,18 @@
   "expo": {
     "name": "cader",
     "slug": "cader",
-    "version": "1.0.1",
-    "orientation": "portrait",
-    "icon": "./assets/icon2.png",
-    "userInterfaceStyle": "light",
-    "usesCleartextTraffic": true,
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
+    "version": "1.0.6",
     "android": {
       "package": "com.condelar.cader",
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+      "config": {
+        "cleartext": {
+          "usesCleartextTraffic": true
+        }
       }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "adcd25d9-e310-44ee-ab6b-13ecdaa4addf"
+        "projectId": "d1df1765-8af5-46cb-850b-9c7364ff7019"
       }
     }
   }
