--- a/mobile/cader-mobile/package.json
+++ b/mobile/cader-mobile/package.json
@@ -34,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "run-app": "serve -s build -l 8002"
   },
   "eslintConfig": {
     "extends": [
