--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cader
 spring.datasource.username=root
-spring.datasource.password=idev
+spring.datasource.password=Idev
 
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.show-sql=true
@@ -20,3 +20,5 @@ vTokenValidity=24
 #server.ssl.key-alias=baeldung
 #
 #server.ssl.enabled=true
+
+spring.data.mongodb.uri=mongodb://localhost:27017/cader
