--- a/server/pom.xml
+++ b/server/pom.xml
@@ -70,6 +70,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
