--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cader
 spring.datasource.username=root
-spring.datasource.password=Idev
+spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update 
+spring.flyway.baseline-on-migrate=true
+spring.flyway.url=jdbc:mysql://localhost:3306/cader
+spring.flyway.user=root
+spring.flyway.password=
+#logging.level.org.flywaydb=DEBUG
+
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.defer-datasource-initialization=true
@@ -21,4 +27,5 @@ vTokenValidity=24
 #
 #server.ssl.enabled=true
 
-spring.data.mongodb.uri=mongodb://localhost:27017/cader
+#spring.data.mongodb.uri=mongodb://localhost:27017/cader
+
