--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cader
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=${cader_user}
+spring.datasource.password=${cader_senha}
 
 spring.flyway.baseline-on-migrate=true
 spring.flyway.url=jdbc:mysql://localhost:3306/cader
-spring.flyway.user=root
-spring.flyway.password=
+spring.flyway.user=${cader_user}
+spring.flyway.password=${cader_senha}
 #logging.level.org.flywaydb=DEBUG
 
 #spring.jpa.hibernate.ddl-auto=update
