--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.flyway.user=${cader_user}
 spring.flyway.password=${cader_senha}
 #logging.level.org.flywaydb=DEBUG
 
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.defer-datasource-initialization=true
