--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,7 @@
 	<description>Cader</description>
 	<properties>
 		<java.version>17</java.version>
+		<springdoc.version>2.0.4</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -86,6 +87,19 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>7.0.1.Final</version> <!-- Use the latest version available -->
+		</dependency>
+
 
 	</dependencies>
 
