--- a/server/pom.xml
+++ b/server/pom.xml
@@ -100,6 +100,13 @@
 			<version>7.0.1.Final</version> <!-- Use the latest version available -->
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+		</dependency>
+
+
 
 	</dependencies>
 
