--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,8 +13,11 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.defer-datasource-initialization=true
 
+
+
 vKeyPass=7e15a70dd45350f6d1057ce9bc7d5be7
 vTokenValidity=24
+pathJasperBase=C:/data-gf/jasper
 
 ## The format used for the keystore. It could be set to JKS in case it is a JKS file
 #server.ssl.key-store-type=PKCS12
