--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<springdoc.version>2.0.4</springdoc.version>
+		<version.jasper>6.21.0</version.jasper>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -104,6 +105,7 @@
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
+			<version>${version.jasper}</version>
 		</dependency>
 
 
