Despembramento prever despesas

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -32,3 +32,6 @@ pathJasperBase=C:/data-gf/jasper
 
 #spring.data.mongodb.uri=mongodb://localhost:27017/cader
 
+
+cors.originPattenrs=condelar.ddns.net
+cors.habilitarCors=false
